--- a/index.html
+++ b/index.html
@@ -2032,7 +2032,7 @@ french: "https://resource2.heygen.ai/video_translate/6e2f1893a7994182948b3dd8f27
     };
    
     // Submit to the form endpoint
-    fetch('https://submit-form.com/1fAkQ2rChhttps://submit-form.com/jdFIFjluA', {
+    fetch('https://submit-form.com/1fAkQ2rCh', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json',
